--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --collect-coverage --watchAll",
+    "only": "react-scripts test --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
